# cpp_crow_crud_project

./: CMakeLists.txt  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt
k8s/: deployment.yaml
src/: aluno.hpp  main.cpp  test_aluno.cpp
tests/: test_core.cpp
